# b3-scraper

./: .env.example  LICENSE  README.md  pyproject.toml
scraper/: config.py  scraper.py
scripts/: run_scraper.py  test_s3_upload.py  validate_parquet.py
