[tool.poetry]
name = "b3-scraper" 
version = "0.1.0"
description = ""
authors = ["Joao Andrade <joaogabriel1598@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [
  { include = "scraper" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = "^2.32.4"
pandas = "^2.3.1"
boto3 = "^1.39.4"
pyarrow = "^20.0.0"
python-dotenv = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
